--- a/src/app/component/badge/badge.component.css
+++ b/src/app/component/badge/badge.component.css
@@ -3,18 +3,21 @@
     flex-direction: column;
     margin: 15px 0;
     align-items: flex-start;
+    white-space: wrap;
+  
   }
   
   .example-radio-button {
     margin: 5px;
     margin-left: 1cm;
+    
   }
   
   .radio{
     margin: 3px;
     margin-left: 25px;
     margin-top: 20px;
-    
+    overflow-x: scroll;
     color: black;
   
   }
@@ -45,3 +48,7 @@
   .example-full-width {
     width: 100%;
   }
+   
+.wrap-mat-radio-label{
+  white-space: normal;
+}
