--- a/src/app/component/badge/badge.component.html
+++ b/src/app/component/badge/badge.component.html
@@ -44,11 +44,13 @@
 
 
 
-          <label class="radio" id="example-radio-group-label">What Faculty of study are you in?</label>
-          <mat-radio-group aria-labelledby="example-radio-group-label" class="example-radio-group"
+          <label class="radio" id="example-radio-group-label ">What Faculty of study are you in?</label>
+          <mat-radio-group class="example-radio-group "
             [(ngModel)]="favstudy">
-            <mat-radio-button class="example-radio-button" *ngFor="let study of studys" [value]="study">
+            <mat-radio-button class="example-radio-button"  *ngFor="let study of studys" [value]="study">
+              <span class="wrap-mat-radio-label">
               {{study}}
+            </span>
             </mat-radio-button>
           </mat-radio-group>
 
@@ -70,6 +72,12 @@
     <!-- <ng-template matStepLabel>Take a Test</ng-template> -->
     <div class="row">
 
+      <!-- <mat-radio-group aria-labelledby="example-radio-group-label" class="example-radio-group"
+      [(ngModel)]="favstudy">
+      <mat-radio-button class="example-radio-button" *ngFor="let study of studys" [value]="study">
+        {{study}}
+      </mat-radio-button>
+    </mat-radio-group> -->
 
       <div class="col-12">
 
@@ -86,14 +94,14 @@
           <label class="radio" id="example-radio-group-label">1. Little interest or pleasure in doing things
             (เบื่อ ทำอะไร ๆ ก็ไม่เพลิดเพลิน)</label>
 
-          <div class="w-fit">
-            <mat-radio-group [(ngModel)]="favfirst" class="radio-first-group">not at all
 
-              <mat-radio-button class="example-radio-button" *ngFor="let first of firsts" [value]="first">
-                {{first}}
-              </mat-radio-button>Nearly everyday
-            </mat-radio-group>
-          </div>
+          <mat-radio-group [(ngModel)]="favfirst" class="example-radio-group">
+
+            <mat-radio-button class="example-radio-button" *ngFor="let first of firsts" [value]="first">
+              {{first}}
+            </mat-radio-button>
+          </mat-radio-group>
+
 
           <mat-divider></mat-divider>
 
@@ -103,11 +111,11 @@
           <label class="radio" id="example-radio-group-label">2. Feeling down, depressed, or hopeless (ไม่สบายใจ
             ซึมเศร้า หรือท้อแท้)</label>
           <div class="w-fit">
-            <mat-radio-group [(ngModel)]="favsecond" class="radio-first-group">not at all
+            <mat-radio-group [(ngModel)]="favsecond" class="example-radio-group">
 
               <mat-radio-button class="example-radio-button" *ngFor="let second of seconds" [value]="second">
                 {{second}}
-              </mat-radio-button>Nearly everyday
+              </mat-radio-button>
             </mat-radio-group>
           </div>
 
@@ -118,11 +126,11 @@
           <label class="radio" id="example-radio-group-label">3. Trouble falling or staying asleep, or sleeping too much
             ( หลับยาก หรือหลับ ๆ ตื่น ๆ หรือหลับมากไป)</label>
           <div class="w-fit">
-            <mat-radio-group [(ngModel)]="favthird" class="radio-first-group">not at all
+            <mat-radio-group [(ngModel)]="favthird" class="example-radio-group">
 
               <mat-radio-button class="example-radio-button" *ngFor="let third of thirds" [value]="third">
                 {{third}}
-              </mat-radio-button>Nearly everyday
+              </mat-radio-button>
             </mat-radio-group>
           </div>
 
@@ -133,11 +141,11 @@
           <label class="radio" id="example-radio-group-label">4. Feeling tired or having little energy ( เหนื่อยง่าย
             หรือไม่ค่อยมีแรง)</label>
           <div class="w-fit">
-            <mat-radio-group [(ngModel)]="favfour" class="radio-first-group">not at all
+            <mat-radio-group [(ngModel)]="favfour" class="example-radio-group">
 
               <mat-radio-button class="example-radio-button" *ngFor="let four of fours" [value]="four">
                 {{four}}
-              </mat-radio-button>Nearly everyday
+              </mat-radio-button>
             </mat-radio-group>
           </div>
           <mat-divider></mat-divider>
@@ -147,11 +155,11 @@
           <label class="radio" id="example-radio-group-label">5. Poor appetite or overeating ( เบื่ออาหาร
             หรือกินมากเกินไป)</label>
           <div class="w-fit">
-            <mat-radio-group [(ngModel)]="favfive" class="radio-first-group">not at all
+            <mat-radio-group [(ngModel)]="favfive" class="example-radio-group">
 
               <mat-radio-button class="example-radio-button" *ngFor="let five of fives" [value]="five">
                 {{five}}
-              </mat-radio-button>Nearly everyday
+              </mat-radio-button>
             </mat-radio-group>
           </div>
           <mat-divider></mat-divider>
@@ -162,11 +170,11 @@
             or have let yourself or your family down ( รู้สึกไม่ดีกับตัวเอง คิดว่าตัวเองล้มเหลว หรือเป็นคนทำให้ตัวเอง
             หรือครอบครัวผิดหวัง)</label>
           <div class="w-fit">
-            <mat-radio-group [(ngModel)]="favsix" class="radio-first-group">not at all
+            <mat-radio-group [(ngModel)]="favsix" class="example-radio-group">
 
               <mat-radio-button class="example-radio-button" *ngFor="let six of sixs" [value]="six">
                 {{six}}
-              </mat-radio-button>Nearly everyday
+              </mat-radio-button>
             </mat-radio-group>
           </div>
           <mat-divider></mat-divider>
@@ -177,11 +185,11 @@
             newspaper or watching television (สมาธิไม่ดีเวลาทำอะไร เช่น ดูโทรทัศน์ ฟังวิทยุ
             หรือทำงานท่ีต้องใช้ความตั้งใจ)</label>
           <div class="w-fit">
-            <mat-radio-group [(ngModel)]="favseven" class="radio-first-group">not at all
+            <mat-radio-group [(ngModel)]="favseven" class="example-radio-group">
 
               <mat-radio-button class="example-radio-button" *ngFor="let seven of sevens" [value]="seven">
                 {{seven}}
-              </mat-radio-button>Nearly everyday
+              </mat-radio-button>
             </mat-radio-group>
           </div>
           <mat-divider></mat-divider>
@@ -192,11 +200,11 @@
             have noticed? Or the opposite — being so fidgety or restless that you have been moving around a lot more
             than usual (พูดหรือทำอะไรช้าจนคนอื่นมองเห็น หรือกระสับกระส่ายจนท่านอยู่ไม่นิ่งเหมือนเคย))</label>
           <div class="w-fit">
-            <mat-radio-group [(ngModel)]="faveight" class="radio-first-group">not at all
+            <mat-radio-group [(ngModel)]="faveight" class="example-radio-group">
 
               <mat-radio-button class="example-radio-button" *ngFor="let eight of eights" [value]="eight">
                 {{eight}}
-              </mat-radio-button>Nearly everyday
+              </mat-radio-button>
             </mat-radio-group>
           </div>
 
@@ -207,11 +215,11 @@
           <label class="radio" id="example-radio-group-label">9. Thoughts that you would be better off dead or of
             hurting yourself in some way (คิดทำร้ายตนเอง หรือคิดว่าถ้าตาย ๆ ไปเสียคงจะดี)</label>
           <div class="w-fit">
-            <mat-radio-group [(ngModel)]="favnine" class="radio-first-group">not at all
+            <mat-radio-group [(ngModel)]="favnine" class="example-radio-group">
 
               <mat-radio-button class="example-radio-button" *ngFor="let nine of nines" [value]="nine">
                 {{nine}}
-              </mat-radio-button>Nearly everyday
+              </mat-radio-button>
             </mat-radio-group>
           </div>
 
@@ -223,7 +231,7 @@
             problems made it for you to do your work, take care of things at home, or get along with other people?
             (หากคุณตรวจสอบปัญหาใด ๆ ปัญหาเหล่านี้ทำให้คุณทำงาน ดูแลบ้าน หรือเข้าสังคมได้ยากเพียงใด?)</label>
           <div class="w-fit">
-            <mat-radio-group [(ngModel)]="favten" class="radio-first-group">
+            <mat-radio-group [(ngModel)]="favten" class="example-radio-group">
 
               <mat-radio-button class="example-radio-button" *ngFor="let ten of tens" [value]="ten">
                 {{ten}}
