--- a/src/app/login-page/login-page.component.scss
+++ b/src/app/login-page/login-page.component.scss
@@ -4,7 +4,6 @@
   justify-content: center;
   width: 100%;
   height: 100%;
-
 }
 
 .card-container {
@@ -14,5 +13,7 @@
   justify-content: center;
   flex-direction: column;
 }
-
+// .checkbox-section {
+//   margin: 12px 0;
+// }
 
