--- a/src/app/layouts/full/full.component.html
+++ b/src/app/layouts/full/full.component.html
@@ -13,23 +13,21 @@
         <!-- This is for the sidebar toggle which is visible on mobile only -->
         <a (click)="showMobileMenu = !showMobileMenu" class="nav-toggler waves-effect waves-light d-block d-lg-none"
           href="javascript:void(0)">
-          <i [ngClass]="showMobileMenu ? 'bi bi-text-left fs-6' : 'bi bi-text-left fs-6'"></i>
+          <i [ngClass]="showMobileMenu "></i>
         </a>
         <!-- ============================================================== -->
         <!-- Logo -->
         <!-- ============================================================== -->
         <a class="navbar-brand" href="/">
           <!-- Logo icon -->
-          <b class="logo-icon">
-            <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
-            <!-- Light Logo icon -->
-            <img src="assets/images/logos/logo-icon.png" alt="homepage" class="dark-logo" />
-          </b>
+
           <!--End Logo icon -->
           <!-- Logo text -->
           <span class="logo-text">
             <!-- Light Logo text -->
-            <img src="assets/images/logos/logo-text.png" class="dark-logo" alt="homepage" />
+            <img 
+              src="https://www.up.ac.th/th/images/%E0%B8%A1%E0%B8%AB%E0%B8%B2%E0%B8%A7%E0%B8%B4%E0%B8%97%E0%B8%A2%E0%B8%B2%E0%B8%A5%E0%B8%B1%E0%B8%A2%E0%B8%9E%E0%B8%B0%E0%B9%80%E0%B8%A2%E0%B8%B2.png"
+              class="dark-logo" alt="homepage" />
           </span>
         </a>
         <!-- ============================================================== -->
@@ -57,13 +55,12 @@
   <!-- ============================================================== -->
   <!-- Left Sidebar - style you can find in sidebar.scss  -->
   <!-- ============================================================== -->
-  <aside *ngIf="!(
+  <!-- <aside *ngIf="!(
     router.url === '/login-page'
     
-    )" class="left-sidebar" data-sidebarbg="skin6" (mouseover)="Logo()"
-    (mouseout)="Logo()">
+    )" class="left-sidebar" data-sidebarbg="skin6" (mouseover)="Logo()" (mouseout)="Logo()">
     <app-sidebar></app-sidebar>
-  </aside>
+  </aside> -->
   <!-- ============================================================== -->
   <!-- End Left Sidebar - style you can find in sidebar.scss  -->
   <!-- ============================================================== -->
@@ -91,7 +88,7 @@
     <!-- ============================================================== -->
     <footer class="footer text-center" *ngIf="!(router.url === '/login-page')">
       All Rights Reserved by Monster Admin. Designed and Developed by
-      <a href="https://www.wrappixel.com">WrapPixel</a>.
+    
     </footer>
     <!-- ============================================================== -->
     <!-- End footer -->
