--- a/src/app/shared/header/navigation.component.html
+++ b/src/app/shared/header/navigation.component.html
@@ -3,24 +3,24 @@
 <!-- ============================================================== -->
 <ul class="navbar-nav float-start me-auto">
   <li class="nav-item">
-    <a class="nav-link waves-effect waves-dark" href="/dashboard"> Starter </a>
+    <a class="nav-link waves-effect waves-dark " href="/dashboard" style="color:black"> Starter </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link waves-effect waves-dark" href="/about"> About </a>
+    <a class="nav-link waves-effect waves-dark" href="/about" style="color:black"> About </a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link waves-effect waves-dark" href="/login-page" style="color:black"> login-page </a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link waves-effect waves-dark" href="/depressiontest" style="color:black"> login-page </a>
   </li>
   <!-- ============================================================== -->
   <!-- create new -->
   <!-- ============================================================== -->
   <li class="nav-item d-none d-md-block" ngbDropdown placement="bottom-end">
-    <a
-      ngbDropdownToggle
-      class="nav-link waves-effect waves-dark"
-      href="javascript:void(0)"
-      data-toggle="dropdown"
-      aria-haspopup="true"
-      aria-expanded="false"
-    >
-      <span>Create New</span>
+    <a ngbDropdownToggle class="nav-link waves-effect waves-dark" href="javascript:void(0)" data-toggle="dropdown"
+      aria-haspopup="true" aria-expanded="false">
+      <span style="color:black">Create New</span>
     </a>
     <div ngbDropdownMenu>
       <a class="dropdown-item" href="#">Action</a>
@@ -38,21 +38,10 @@
   <!-- User profile and search -->
   <!-- ============================================================== -->
   <li class="nav-item" ngbDropdown placement="bottom-end">
-    <a
-      ngbDropdownToggle
-      class="nav-link waves-effect waves-dark pro-pic"
-      href="javascript:void(0)"
-      data-toggle="dropdown"
-      aria-haspopup="true"
-      aria-expanded="false"
-    >
-      <img
-        src="assets/images/users/user1.jpg"
-        alt="user"
-        class="rounded-circle"
-        width="31"
-      />
-      <span class="ms-2">Sirikamon Chankul</span>
+    <a ngbDropdownToggle class="nav-link waves-effect waves-dark pro-pic" href="javascript:void(0)"
+      data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <img src="assets/images/users/user1.jpg" alt="user" class="rounded-circle" width="31" />
+      <span class="ms-2" style="color:black">Sirikamon Chankul</span>
     </a>
     <div class="dropdown-menu-right" ngbDropdownMenu>
       <a class="dropdown-item" href="javascript:void(0)"> My Profile</a>
