--- a/src/app/shared/header/navigation.component.html
+++ b/src/app/shared/header/navigation.component.html
@@ -12,7 +12,7 @@
     <a class="nav-link waves-effect waves-dark" href="/login-page" style="color:black"> login-page </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link waves-effect waves-dark" href="/depressiontest" style="color:black"> login-page </a>
+    <a class="nav-link waves-effect waves-dark" href="/depressiontest" style="color:black"> test </a>
   </li>
   <!-- ============================================================== -->
   <!-- create new -->
