--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,10 +1,52 @@
-<div class="card">
-    <div class="card-body">
-        <h4 class="card-title">About Monster Angular</h4>
-        <h5 class="card-subtitle text-muted">Angular 14 CLI Admin Template, Light & Dark Versions, Landing Page, 4 Demo Variations, 3 Dashboard Variations, 25+ Angular Components, 200+ Pages, 2000+ Font Icons & much more...</h5>
-        <div class="my-4">
-            <img src="https://www.wrappixel.com/wp-content/uploads/edd/2020/04/monster-angular-admin-y.jpg" class="img-fluid" alt="xtreme-ang" />
-        </div>        
-        <a href="htthttps://www.wrappixel.com/templates/monster-angular-dashboard/" class="btn btn-primary">Check Pro Version</a>
+<h2 class="card-title" style="margin-top: 20px;margin-left:40px;">About Us</h2>
+<h5 class="card-subtitle text-muted" style="margin-left:30px;">This program is created for research subjects only. This
+  website is only
+  about
+  examining the level of depression among University of Phayao students.
+</h5>
+<h5 class="card-subtitle text-muted" style="margin-left:20px;">The research author is Miss Sirikamon Chankul and the
+  research advisor is
+  Mr.Nutdanai. Hope you enjoy our page and you can make suggestions to our page in Feedback Page. </h5>
+<div class="row">
+  <div class="col-lg-4 col-md-2">
+    <div class="card" style="margin-top: 20px;">
+      <div class="card-body">
+
+        <img class="card-img-top img-responsive" src="https://ict.up.ac.th/web/images/personal/natthapongk.jpg"
+          class="fit" alt="Teacher" />
+        <div class="card-body">
+          <h4 class="card-title">นายณัฐดนัย คำขาด</h4>
+          <p class="card-text">
+            อาจารย์ที่ปรึกษาวิจัย
+          </p>
+          <a href="https://www.scopus.com/authid/detail.uri?authorId=57216207659" class="btn btn-primary">Ocopus</a>
+        </div>
+
+
+      </div>
+
     </div>
+
+  </div>
+  <div class="col-lg-4 col-md-2">
+    <div class="card" style="margin-top: 20px;">
+      <div class="card-body">
+
+        <img class="card-img-top img-responsive" src="assets/images/bg/bg1.jpg" alt="Card image cap" />
+        <div class="card-body">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+          <a href="javascript:void(0)" class="btn btn-primary">Read More</a>
+        </div>
+
+
+      </div>
+
+    </div>
+
+  </div>
+
 </div>
