--- a/src/app/component/DepressionTest/depressiontest.component.html
+++ b/src/app/component/DepressionTest/depressiontest.component.html
@@ -1,11 +1,12 @@
-<h2>Depression Assessment Form PATIENT HEALTH QUESTIONNAIRE-9 (PHQ-9) </h2>
+
+<h2 style="margin-top: 20px;margin-bottom:20px;">Depression Assessment Form PATIENT HEALTH QUESTIONNAIRE-9 (PHQ-9) </h2>
 
 <mat-stepper linear #stepper>
-  <mat-step label="Fill out your Info">
+  <mat-step label="Fill out your Info" >
 
     <!-- <ng-template matStepLabel></ng-template> -->
 
-    <div class="row">
+    <div class="row" >
 
 
 
