--- a/src/app/dashboard/dashboard-components/top-cards/top-cards.component.html
+++ b/src/app/dashboard/dashboard-components/top-cards/top-cards.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-6 col-lg-3" *ngFor='let topcard of topcards'>
+    <div class="col-md-6 col-lg-3" *ngFor='let topcard of topcards' style="margin-top: 20px;">
         <div class="card">
             <div class="card-body">
                 <div class="d-flex align-items-center">
