--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,18 +1,14 @@
-<main class="container">
+<main class="container" style="margin-top: 10%;">
   <mat-card class="card-container">
-    <mat-card-content>Login to Depression Test website</mat-card-content>
-    <table class="example-full-width" cellspacing="0">
-      <tr>
-        <td>
-          <mat-form-field appearance="outline" class="example-full-width">
-            <mat-label>Username</mat-label>
-            <input matInput [(ngModel)]="username" required>
-          </mat-form-field>
-        </td>
-      </tr>
-    </table>
-    <td>
-      <mat-form-field appearance="outline" class="example-full-width">
+    <!-- <mat-card-content>Login to Depression Test website -->
+    <div class="w-fit">
+
+      <mat-form-field appearance="outline" class="example-full-width" style=" width: 100%;">
+        <mat-label>Username</mat-label>
+        <input matInput [(ngModel)]="username" required>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline" class="example-full-width" style=" width: 100%;">
         <mat-label>Password</mat-label>
         <input matInput [(ngModel)]="password" required>
 
@@ -21,9 +17,23 @@
         <mat-checkbox>Remember me</mat-checkbox>
 
       </section>
-    </td>
 
-    <button mat-button (click)="onLogin()">Login</button>
+
+    </div>
+    <!-- </mat-card-content> -->
+    <!-- <td>
+      <mat-form-field appearance="outline" class="example-full-width" style=" width: 100%;">
+        <mat-label>Password</mat-label>
+        <input matInput [(ngModel)]="password" required>
+
+      </mat-form-field>
+      <section class="checkbox-section">
+        <mat-checkbox>Remember me</mat-checkbox>
+
+      </section>
+    </td> -->
+
+    <button mat-button (click)="onLogin()" class="button1">Login</button>
     <a href="#">Foget password?</a>
   </mat-card>
 </main>
