--- a/src/app/login-page/login-page.component.scss
+++ b/src/app/login-page/login-page.component.scss
@@ -2,18 +2,35 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
   width: 100%;
   height: 100%;
+  margin: auto;
+  padding: 10px;
 }
 
 .card-container {
   width: 40%;
-  background-color: aqua;
+  background-color: whitesmoke;
   display: flex;
   justify-content: center;
   flex-direction: column;
+  min-width: 350px;
 }
 // .checkbox-section {
 //   margin: 12px 0;
 // }
-
+.button1 {
+   display: inline-block;
+   padding: 0.35em 1.2em;
+   border: 0.1em solid #ffffff;
+   margin: 0 0.3em 0.3em 0;
+   border-radius: 0.12em;
+   box-sizing: border-box;
+   text-decoration: none;
+   font-family: "Roboto", sans-serif;
+   font-weight: 300;
+   color: #ffffff;
+   text-align: center;
+   transition: all 0.2s;
+}
