--- a/src/app/shared/header/navigation.component.html
+++ b/src/app/shared/header/navigation.component.html
@@ -45,12 +45,11 @@
     </a>
     <div class="dropdown-menu-right" ngbDropdownMenu>
       <a class="dropdown-item" href="javascript:void(0)"> My Profile</a>
-      <a class="dropdown-item" href="javascript:void(0)"> My Balance</a>
+      <a class="dropdown-item" href="/myhistory"> My History</a>
       <a class="dropdown-item" href="javascript:void(0)"> Inbox</a>
       <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="javascript:void(0)"> Account Setting</a>
-      <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="javascript:void(0)"> Logout</a>
+      <button class="dropdown-item" (click)="logout()"> Logout</button>
+      
     </div>
   </li>
   <!-- ============================================================== -->
