--- a/src/app/shared/header/navigation.component.html
+++ b/src/app/shared/header/navigation.component.html
@@ -3,17 +3,15 @@
 <!-- ============================================================== -->
 <ul class="navbar-nav float-start me-auto">
   <li class="nav-item">
-    <a class="nav-link waves-effect waves-dark " href="/dashboard" style="color:black"> Starter </a>
+    <a class="nav-link waves-effect waves-dark " href="/dashboard" style="color:black"> Dashboard </a>
   </li>
   <li class="nav-item">
     <a class="nav-link waves-effect waves-dark" href="/about" style="color:black"> About </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link waves-effect waves-dark" href="/login-page" style="color:black"> login-page </a>
+    <a class="nav-link waves-effect waves-dark" href="/depressiontest" style="color:black"> Depression Test </a>
   </li>
-  <li class="nav-item">
-    <a class="nav-link waves-effect waves-dark" href="/depressiontest" style="color:black"> test </a>
-  </li>
+ 
   <!-- ============================================================== -->
   <!-- create new -->
   <!-- ============================================================== -->
@@ -44,12 +42,11 @@
       <span class="ms-2" style="color:black">Sirikamon Chankul</span>
     </a>
     <div class="dropdown-menu-right" ngbDropdownMenu>
-      <a class="dropdown-item" href="javascript:void(0)"> My Profile</a>
+      <a class="dropdown-item" href="/profile-info"> My Profile</a>
       <a class="dropdown-item" href="/myhistory"> My History</a>
-      <a class="dropdown-item" href="javascript:void(0)"> Inbox</a>
       <div class="dropdown-divider"></div>
       <button class="dropdown-item" (click)="logout()"> Logout</button>
-      
+
     </div>
   </li>
   <!-- ============================================================== -->
