--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,5 @@
 @import "tailwindcss/components";
 
 @import "tailwindcss/utilities";
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
