--- a/src/app/component/DepressionTest/dialog-overview.html
+++ b/src/app/component/DepressionTest/dialog-overview.html
@@ -6,7 +6,7 @@
 </div>
 
 <div mat-dialog-actions>
-    <button class="btn btn-outline-primary" mat-button>Send me!</button>
-    <button class="btn btn-outline-success" style="margin:10px;" mat-button>Next</button>
+    <button class="btn btn-outline-primary" mat-button>save</button>
+    <button class="btn btn-outline-success" style="margin:10px;" mat-button>Cancel</button>
 </div>
 
