--- a/src/app/shared/header/navigation.component.html
+++ b/src/app/shared/header/navigation.component.html
@@ -11,7 +11,10 @@
   <li class="nav-item">
     <a class="nav-link waves-effect waves-dark" href="/depressiontest" style="color:black"> Depression Test </a>
   </li>
- 
+  <li class="nav-item">
+    <a class="nav-link waves-effect waves-dark" href="/scoreResult" style="color:black"> Test result</a>
+  </li>
+
   <!-- ============================================================== -->
   <!-- create new -->
   <!-- ============================================================== -->
