--- a/src/app/profile-info/profile-info.component.scss
+++ b/src/app/profile-info/profile-info.component.scss
@@ -1,27 +1,21 @@
 .example-form {
-    min-width: 150px;
-    max-width: 500px;
-    width: 100%;
-   
-   
-  }
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
 
-  
-
-  .example-card{
-    margin-top: 20px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+.example-card {
+  margin-top: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   justify-content: center;
-
-  }
-
-
+  display: flex;
+  flex-direction: column;
+}
 
 .grid-item {
   padding: 1rem;
-  height: 4rem; 
+  height: 4rem;
 }
-
 
 .grid {
   max-width: 1200px;
@@ -30,15 +24,23 @@
   gap: 1rem;
 }
 @media (min-width: 600px) {
-  .grid { grid-template-columns: repeat(2, 1fr); }
+  .grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 @media (min-width: 1200px) {
-  .grid { grid-template-columns: repeat(4, 1fr); }
+  .grid {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
-.mat-button{
-
+.mat-button {
   margin-top: 20px;
- 
- 
+}
 
+.card-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
