--- a/src/app/shared/header/navigation.component.html
+++ b/src/app/shared/header/navigation.component.html
@@ -42,7 +42,7 @@
     <a ngbDropdownToggle class="nav-link waves-effect waves-dark pro-pic" href="javascript:void(0)"
       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       <img src="assets/images/users/user1.jpg" alt="user" class="rounded-circle" width="31" />
-      <span class="ms-2" style="color:black">Sirikamon Chankul</span>
+      <span class="ms-2" style="color:black">{{fName}} {{lName}}</span>
     </a>
     <div class="dropdown-menu-right" ngbDropdownMenu>
       <a class="dropdown-item" href="/profile-info"> My Profile</a>
