--- a/src/app/component/my-history/my-history.component.scss
+++ b/src/app/component/my-history/my-history.component.scss
@@ -1,4 +1,8 @@
 table {
-    width: 100%;
-    margin-top: 30px;
-  }
+  width: 100%;
+  margin-top: 30px;
+}
+.example-form-field {
+  margin: 0 8px 16px 0;
+  display: flex;
+}
