--- a/src/app/component/my-history/my-history.component.html
+++ b/src/app/component/my-history/my-history.component.html
@@ -41,12 +41,66 @@
 
 <div *ngIf="roleName == 'Teacher'">
   <mat-form-field class="example-form-field" appearance="fill">
-    <mat-date-range-input [formGroup]="campaignOne" [rangePicker]="campaignOnePicker"
-      [comparisonStart]="campaignTwo.value.start" [comparisonEnd]="campaignTwo.value.end">
+    <mat-label>Enter a date range</mat-label>
+    <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
       <input matStartDate placeholder="Start date" formControlName="start">
       <input matEndDate placeholder="End date" formControlName="end">
     </mat-date-range-input>
-    <mat-datepicker-toggle matIconSuffix [for]="campaignOnePicker"></mat-datepicker-toggle>
-    <mat-date-range-picker #campaignOnePicker></mat-date-range-picker>
+    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-date-range-picker #picker></mat-date-range-picker>
+    <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
+    <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
   </mat-form-field>
+  <!-- <div>
+    {{range.value.start}}
+    {{range.value.end}}
+
+  </div> -->
+  <button (click)="callDataForTeacher()" mat-raised-button color="primary">Search</button>
+
+  <mat-form-field class="filter">
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder=" student id" #input>
+  </mat-form-field>
+
+
+  <table mat-table [dataSource]="dataSourceForTecher" class="mat-elevation-z8">
+    <ng-container matColumnDef="UserId">
+      <th mat-header-cell *matHeaderCellDef> user id </th>
+      <td mat-cell *matCellDef="let element"> {{element.userId}} </td>
+    </ng-container>
+    <ng-container matColumnDef="ScoreResult">
+      <th mat-header-cell *matHeaderCellDef> ScoreResult </th>
+      <td mat-cell *matCellDef="let element"> {{element.scoreResult}} </td>
+    </ng-container>
+    <!-- Name Column -->
+    <ng-container matColumnDef="LevelResult">
+      <th mat-header-cell *matHeaderCellDef> Level </th>
+      <td mat-cell *matCellDef="let element"> {{element.levelResult}} </td>
+    </ng-container>
+
+    <!-- Weight Column -->
+    <ng-container matColumnDef="Comment">
+      <th mat-header-cell *matHeaderCellDef> Comment form the doctor </th>
+      <td mat-cell *matCellDef="let element"> {{element.comment}} </td>
+    </ng-container>
+
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="LastUpdated">
+      <th mat-header-cell *matHeaderCellDef> Updated test </th>
+      <td mat-cell *matCellDef="let element">
+        {{this.moment(convertToUTC(element.lastUpdated? element.lastUpdated:"-")).format("DD/MM/yyyy HH:mm")}}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="Test Date">
+      <th mat-header-cell *matHeaderCellDef> Date of test </th>
+      <td mat-cell *matCellDef="let element">
+        {{this.moment(convertToUTC(element.testDate? element.testDate:"-")).format("DD/MM/yyyy HH:mm")}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayColumnsForTeacher"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayColumnsForTeacher;"></tr>
+  </table>
 </div>
