--- a/src/app/score-result/score-result.component.html
+++ b/src/app/score-result/score-result.component.html
@@ -1,1 +1,19 @@
-<p>score-result works!</p>
+<mat-card style="top:20px">
+  <mat-card-header>
+    <mat-card-title>Total score</mat-card-title>
+
+  </mat-card-header>
+  <mat-card-content>
+    <img mat-card-sm-image src="" alt="emoji">
+    <br>
+
+    <P>This is your score: {{score}}</P>  
+    <p>Advice for you: {{level}}</p>
+    <mat-divider></mat-divider>
+    <br>
+    <p>You can contact University Hospital of Phayao. Faculty of Medicine You can follow the details of the phone
+      numbers below during business hours from 8:00 a.m. - 8:00 p.m.</p>
+    <a href="https://uph.up.ac.th/contact">for more infomation cick here!</a>
+  </mat-card-content>
+
+</mat-card>
