--- a/src/app/profile-info/profile-info.component.scss
+++ b/src/app/profile-info/profile-info.component.scss
@@ -10,6 +10,7 @@
   justify-content: center;
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
 .grid-item {
@@ -43,4 +44,14 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
+}
+.mat-card1 {
+  margin-top: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  width: 100%;
+}
+.mat-card2 {
+  margin-top: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  width: 100%;
 }
