--- a/src/app/component/my-history/my-history.component.html
+++ b/src/app/component/my-history/my-history.component.html
@@ -15,7 +15,7 @@
     {{range.value.end}}
 
   </div> -->
-  <button (click)="callDataForTeacher()" mat-raised-button color="primary">Search</button>
+  <button (click)="getServiceHistory()" mat-raised-button color="primary">Search</button>
 
   <mat-form-field class="filter">
     <mat-label>Filter</mat-label>
@@ -91,9 +91,14 @@
 
 
   <table mat-table [dataSource]="dataSourceForTecher" class="mat-elevation-z8">
-    <ng-container matColumnDef="UserId">
-      <th mat-header-cell *matHeaderCellDef> user id </th>
-      <td mat-cell *matCellDef="let element"> {{element.userId}} </td>
+
+    <ng-container matColumnDef="FirstName">
+      <th mat-header-cell *matHeaderCellDef> FirstName </th>
+      <td mat-cell *matCellDef="let element"> {{element.user.firstName}} </td>
+    </ng-container>
+    <ng-container matColumnDef="LastName">
+      <th mat-header-cell *matHeaderCellDef> LastName </th>
+      <td mat-cell *matCellDef="let element"> {{element.user.lastName}} </td>
     </ng-container>
     <ng-container matColumnDef="ScoreResult">
       <th mat-header-cell *matHeaderCellDef> ScoreResult </th>
