--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,23 +1,59 @@
-<app-top-cards></app-top-cards>
-<!-- ============================================================== -->
-<!-- Sales chart -->
-<!-- ============================================================== -->
 <div class="row">
-  <div class="col-lg-7">
-    <app-sales-ratio></app-sales-ratio>
+  <div class="col-md-6 col-lg-3" *ngFor='let topcard of topcards' style="margin-top: 20px;">
+      <div class="card">
+          <div class="card-body">
+              <div class="d-flex align-items-center">
+                  <div class="btn btn-lg rounded-circle round round-lg fs-6 d-flex align-items-center justify-content-center bg-light-{{topcard.bgcolor}} text-{{topcard.bgcolor}}">
+                      <i class={{topcard.icon}}></i>
+                  </div>
+                  <div class="ms-3">
+                      <h3 class="mb-0 font-weight-bold">{{topcard.title}}</h3>
+                      <small class="text-muted fs-3">{{topcard.subtitle}}</small>
+                  </div>
+              </div>
+          </div>
+      </div>
   </div>
-
 </div>
-<!-- ============================================================== -->
-<!-- Sales chart -->
-<!-- ============================================================== -->
-<!-- ============================================================== -->
-<!-- Table -->
-<!-- ============================================================== -->
+
 <div class="row">
-  <!-- column -->
+  <div class="card">
+    <div class="card-body">
+      <div class="d-md-flex align-items-center">
+        <div>
+          <h4 class="card-title">Student Behavior</h4>
+          <h5 class="card-subtitle text-muted">How student working on this test</h5>
+        </div>
+      </div>
+      <div class="row mt-3">
+        <!-- column -->
+        <div class="col-lg-12">
+          <div>
+            <div class="d-flex flex-column w-100">
+              <apx-chart [series]="studentChartOptions.series" [chart]="studentChartOptions.chart"
+                [plotOptions]="studentChartOptions.plotOptions" [xaxis]="studentChartOptions.xaxis"
+                [yaxis]="studentChartOptions.yaxis" [grid]="studentChartOptions.grid"
+                [stroke]="studentChartOptions.stroke" [tooltip]="studentChartOptions.tooltip"
+                [dataLabels]="studentChartOptions.dataLabels" [legend]="studentChartOptions.legend"
+                [colors]="studentChartOptions.colors">
+              </apx-chart>
+              <p *ngIf="freqStudent != 0">frequency of student who doing the test done: {{freqStudent}}</p>
+              <div >
+                <button mat-raised-button class="button1" (click)="getNumDate()">14 days</button>
+                <button mat-raised-button class="button2" (click)="getNumMonth()">30 days</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- column -->
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+
   <div class="col-12">
     <app-top-selling></app-top-selling>
   </div>
 </div>
-
