--- a/src/app/component/my-history/my-history.component.html
+++ b/src/app/component/my-history/my-history.component.html
@@ -19,7 +19,7 @@
 
   <mat-form-field class="filter">
     <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder=" student id" #input>
+    <input matInput (keyup)="applyFilerStudent($event)" placeholder=" student id" #input>
   </mat-form-field>
 
 
