--- a/src/app/profile-info/dialog-button-profile-info.html
+++ b/src/app/profile-info/dialog-button-profile-info.html
@@ -1,10 +1,10 @@
 <h1 mat-dialog-title>Confirm Save As</h1>
 <div mat-dialog-content>
   Are you sure you will save this form?
-  
+
 </div>
 
 <div mat-dialog-actions>
-    <button class="btn btn-outline-success" mat-button>Save</button>
-    <button class="btn btn-outline-danger" style="margin:10px;" mat-button>cancel</button>
+  <button class="btn btn-outline-success" mat-button (click)="confirm()">Save</button>
+  <button class="btn btn-outline-danger" style="margin:10px;" mat-button (click)="onNoClick()">cancel</button>
 </div>
