--- a/src/app/component/my-history/my-history.component.scss
+++ b/src/app/component/my-history/my-history.component.scss
@@ -15,3 +15,16 @@ table {
 .filter {
   width: 100%;
 }
+
+.buttonforteacher {
+  background-color: rgb(37, 193, 37);
+  color: antiquewhite;
+ 
+}
+.box {
+  padding: 15px;
+  display: inline-block;
+  vertical-align: middle;
+  overflow: hidden;
+  inline-size: 200px;
+}
