--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,34 @@
-<h2 class="card-title" style="margin-top: 20px;margin-left:40px;">About Us</h2>
+<div class="card">
+  <div class="headtext">About Us</div>
+  <p style="margin-left: 30px;">This program is created for research subjects only. This website is only about examining
+    the level of depression
+    among University of Phayao students. The research author is Miss Sirikamon Chankul and the research advisor is
+    Mr.Nutdanai. Hope you enjoy our page.</p>
+
+  <div class="container">
+    <div class="image">
+      <img class="card-img-top img-responsive" src="https://ict.up.ac.th/web/images/personal/natthapongk.jpg"
+        class="fit" alt="Teacher">
+    </div>
+    <div class="text">
+      <h4><b>Mr. Natdanai Khamkad</b></h4>
+      <p>faculty member & Research Advisor</p>
+      <a href="https://www.scopus.com/authid/detail.uri?authorId=57216207659" class="btn btn-primary">Ocopus</a>
+    </div>
+ 
+    
+  </div>
+  <br>
+  <br>
+</div>
+
+
+
+
+
+
+
+<!-- <h2 class="card-title" style="margin-top: 20px;margin-left:40px;">About Us</h2>
 <h5 class="card-subtitle text-muted" style="margin-left:30px;">This program is created for research subjects only. This
   website is only
   about
@@ -28,25 +58,8 @@
     </div>
 
   </div>
-  <div class="col-lg-4 col-md-2">
-    <div class="card" style="margin-top: 20px;">
-      <div class="card-body">
-
-        <img class="card-img-top img-responsive" src="assets/images/bg/bg1.jpg" alt="Card image cap" />
-        <div class="card-body">
-          <h4 class="card-title">Card title</h4>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <a href="javascript:void(0)" class="btn btn-primary">Read More</a>
-        </div>
+  
 
 
-      </div>
 
-    </div>
-
-  </div>
-
-</div>
+</div> -->
