--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -38,8 +38,9 @@
 
                          <mat-form-field appearance="outline" style=" width: 100%;">
                            <mat-label>Enter your password</mat-label>
-                           <input matInput type="password" placeholder="Enter password" formControlName="password"
+                           <input matInput type="password" placeholder="Enter password" formControlName="password" [type]="hide ? 'password' : 'text'"
                              required>
+                             <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                            <mat-error *ngIf="loginFormControl.invalid">
                              Please provide a valid password.
                            </mat-error>
